Add Nullable struct to control marshaling of nil values
Previously, there was no way to selectively omit fields from a request when their
value is nil. Optional fields use the omitempty tag, so there was no way to
force the SDK to set the field to "null" in the JSON request.

This change adds the Nullable wrapper. The inner value is always marshaled,
even if it's nil. The Nullable itself, though, still uses omitempty, so it's
omitted if nil. It's set based on the `isNullable` property, which is an
OpenAPI 3.0 keyword. I'm going to introduce a followup change to set it
based on an x-nullable tag when upgrading our 2.0 spec to 3.0.

There was previously a set of Nullable classes for primitive types, but
it didn't quite do what we wanted it to, so I removed it in favor of a
generic solution.

I added an Omit* method to Nullable, but I'm not sure it's necessary. All
of the CCAPI's PATCH request objects are separate from their corresponding
response objects, so it's unlikely that anyone's ever going to need to
call Omit*. They can just leave the field out of the struct.

--- a/internal/spec/templates/model_simple.mustache
+++ b/internal/spec/templates/model_simple.mustache
@@ -19,7 +19,7 @@ type {{classname}} struct {
 {{#deprecated}}
 	// Deprecated
 {{/deprecated}}
-{{name}} {{^required}}*{{/required}}{{{dataType}}} `json:"{{baseName}}{{^required}},omitempty{{/required}}{{#isLong}},string{{/isLong}}"{{#withXml}} xml:"{{baseName}}{{#isXmlAttribute}},attr{{/isXmlAttribute}}"{{/withXml}}{{#vendorExtensions.x-go-custom-tag}} {{{.}}}{{/vendorExtensions.x-go-custom-tag}}`
+    {{name}} {{^required}}*{{/required}}{{#isNullable}}Nullable[{{vendorExtensions.x-go-base-type}}]{{/isNullable}}{{^isNullable}}{{{dataType}}}{{/isNullable}} `json:"{{baseName}}{{^required}},omitempty{{/required}}{{#isLong}},string{{/isLong}}"{{#withXml}} xml:"{{baseName}}{{#isXmlAttribute}},attr{{/isXmlAttribute}}"{{/withXml}}{{#vendorExtensions.x-go-custom-tag}} {{{.}}}{{/vendorExtensions.x-go-custom-tag}}`
 {{/vars}}
 {{#isAdditionalPropertiesTrue}}
 	AdditionalProperties map[string]interface{}
@@ -109,16 +109,21 @@ func (o *{{classname}}) Get{{name}}() {{vendorExtensions.x-go-base-type}} {
 		var ret {{vendorExtensions.x-go-base-type}}
 		return ret
 	}
-	return *o.{{name}}
+    return {{^isNullable}}*{{/isNullable}}o.{{name}}{{#isNullable}}.GetValue(){{/isNullable}}
 }
 
-// Set{{name}} gets a reference to the given {{dataType}} and assigns it to the {{name}} field.
+// Set{{name}} gets a reference to the given {{vendorExtensions.x-go-base-type}} and assigns it to the {{name}} field.
 {{#deprecated}}
 // Deprecated.
 {{/deprecated}}
-func (o *{{classname}}) Set{{name}}(v {{vendorExtensions.x-go-base-type}}) {
-	o.{{name}} = &v
-}
+func (o *{{classname}}) Set{{name}}(v {{#isNullable}}*{{/isNullable}}{{vendorExtensions.x-go-base-type}}) {
+    {{^isNullable}}o.{{name}} = &v{{/isNullable}}{{#isNullable}}o.{{name}} = &Nullable[{{vendorExtensions.x-go-base-type}}]{inner: v}{{/isNullable}}
+}{{#isNullable}}
+
+// Omit{{{name}}} removes the field from the request.
+func (o *{{{classname}}}) Omit{{{name}}}() {
+    o.{{{name}}} = nil
+}{{/isNullable}}
 
 {{/required}}
 {{/vars}}
@@ -146,9 +151,9 @@ func (o {{classname}}) MarshalJSON() ([]byte, error) {
 	{{/isArray}}
 	{{/parent}}
 	{{#vars}}
-	if {{#required}}true{{/required}}{{^required}}o.{{name}} != nil{{/required}} {
-		toSerialize["{{baseName}}"] = o.{{name}}
-	}
+        if {{#required}}true{{/required}}{{^required}}o.{{name}}{{#isNullable}}.marshalNull || o.{{name}}.inner{{/isNullable}} != nil{{/required}} {
+        toSerialize["{{baseName}}"] = o.{{name}}
+    }
 	{{/vars}}
 	{{#isAdditionalPropertiesTrue}}
 
