Fetch latest API spec with tags
Includes minor template changes to support operation tags, which
openapi-generator interprets as separate APIs. Now, different
categories are rendered in separate doc files. I don't see a way
around that, but it's probably not a big deal.

service.go's interfaces are now partitioned by category, but there
are no functional changes. Tested using the terraform provider.

--- a/internal/spec/templates/service.mustache
+++ b/internal/spec/templates/service.mustache
@@ -12,7 +12,7 @@ import (
 )
 
 type Service interface {
-    {{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}
+    {{#apiInfo}}{{#apis}}// {{{baseName}}}{{#operations}}{{#operation}}
         {{nickname}}(ctx _context.Context{{#allParams}}{{#required}}, {{paramName}} {{^isPathParam}}*{{/isPathParam}}{{{dataType}}}{{/required}}{{/allParams}}{{#hasOptionalParams}}, options *{{nickname}}Options{{/hasOptionalParams}}) ({{^returnTypeIsPrimitive}}{{#returnType}}*{{{.}}}, {{/returnType}}{{/returnTypeIsPrimitive}}*_nethttp.Response, error){{/operation}}
 	{{/operations}}{{/apis}}{{/apiInfo}}
 }
