--- a/internal/spec/templates/README.mustache
+++ b/internal/spec/templates/README.mustache
@@ -69,8 +69,8 @@ All URIs are relative to *{{basePath}}*
 
 Class | Method | HTTP request | Description
 ------------ | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{{#operation}}*{{classname}}* | **{{operationId}}** | **{{httpMethod}}** {{path}} | {{summary}}
-{{/operation}}{{/operations}}{{/-first}}{{/apis}}{{/apiInfo}}
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | **{{operationId}}** | **{{httpMethod}}** {{path}} | {{summary}}
+{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 
 {{#apiInfo}}{{#apis}}{{#-first}}{{#infoEmail}}## Author
 {{{.}}}
