Fetch latest API spec with tags
Includes minor template changes to support operation tags, which
openapi-generator interprets as separate APIs. Now, different
categories are rendered in separate doc files. I don't see a way
around that, but it's probably not a big deal.

service.go's interfaces are now partitioned by category, but there
are no functional changes. Tested using the terraform provider.

--- a/internal/spec/templates/README.mustache
+++ b/internal/spec/templates/README.mustache
@@ -67,10 +67,10 @@ if apiResponse != nil {
 
 All URIs are relative to *{{basePath}}*
 
-Class | Method | HTTP request | Description
+API | Method | HTTP request | Description
 ------------ | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{{#operation}}*{{classname}}* | **{{operationId}}** | **{{httpMethod}}** {{path}} | {{summary}}
-{{/operation}}{{/operations}}{{/-first}}{{/apis}}{{/apiInfo}}
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}[{{classname}}](docs/{{classname}}.md) | **{{operationId}}** | **{{httpMethod}}** {{path}} | {{summary}}
+{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 
 {{#apiInfo}}{{#apis}}{{#-first}}{{#infoEmail}}## Author
 {{{.}}}
