--- a/internal/spec/templates/api_doc.mustache
+++ b/internal/spec/templates/api_doc.mustache
@@ -1,4 +1,4 @@
-# {{invokerPackage}}\{{classname}}{{#description}}
+# {{baseName}}{{#description}}
 
 {{.}}{{/description}}
 
@@ -85,7 +85,6 @@ Name | Type | Description  | Notes
 - **Accept**: {{#produces}}{{{mediaType}}}{{^-last}}, {{/-last}}{{/produces}}{{^produces}}Not defined{{/produces}}
 
 [[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints)
-[[Back to Model list]](../README.md#documentation-for-models)
 [[Back to README]](../README.md)
 
 {{/operation}}
