Improved api documentation template
Various api documentation template improvements were made including:

* always showing ctx as a path param,
* fixing the name of the options struct,
* not showing an options struct when it doesn't exist.

--- a/internal/spec/templates/api_doc.mustache
+++ b/internal/spec/templates/api_doc.mustache
@@ -56,16 +56,15 @@ func main() {
 
 ### Path Parameters
 
-{{^allParams}}This endpoint does not need any parameter.{{/allParams}}{{#pathParams}}{{#-last}}
 Name | Type | Description  | Notes
 ------------- | ------------- | ------------- | -------------
-**ctx** | **context.Context** | context for authentication, logging, cancellation, deadlines, tracing, etc.{{/-last}}{{/pathParams}}{{#pathParams}}
+**ctx** | **context.Context** | context for authentication, logging, cancellation, deadlines, tracing, etc.{{#pathParams}}
 **{{paramName}}** | {{^isPrimitiveType}}{{^isFile}}[{{/isFile}}{{/isPrimitiveType}}**{{dataType}}**{{^isPrimitiveType}}{{^isFile}}]({{baseType}}.md){{/isFile}}{{/isPrimitiveType}} | {{description}} | {{#defaultValue}}[default to {{.}}]{{/defaultValue}}{{/pathParams}}
 
 ### Other Parameters
+{{#hasOptionalParams}}
 
-Other parameters are passed through a pointer to a api{{{nickname}}} struct via the builder pattern
-{{#allParams}}{{#-last}}
+Optional parameters can be passed through a pointer to the {{{nickname}}}Options struct.{{/hasOptionalParams}}{{#allParams}}{{#-last}}
 
 Name | Type | Description  | Notes
 ------------- | ------------- | ------------- | -------------{{/-last}}{{/allParams}}{{#allParams}}
