--- a/internal/spec/templates/README.mustache
+++ b/internal/spec/templates/README.mustache
@@ -18,13 +18,13 @@ For more information, please visit [{{{infoUrl}}}]({{{infoUrl}}})
 Install the package:
 
 ```shell
-go get github.com/cockroachdb/cockroach-cloud-sdk-go
+go get github.com/cockroachdb/cockroach-cloud-sdk-go/v2
 ```
 
 Import the package:
 
 ```golang
-import "github.com/cockroachdb/pkg/{{packageName}}"
+import "github.com/cockroachdb/cockroach-cloud-sdk-go/v2/pkg/{{packageName}}"
 ```
 
 ## Example Client Usage
